<resources>
    <string name="app_name">Games DB</string>
    <string name="label_genre">Genre: </string>
    <string name="label_platforms">Platforms: </string>
    <string name="label_sample_summary">Step into the role of an aspiring martial-arts master and follow the path of the open palm or the closed fist. In this multi-award-winning action-RPG, your choices and actions will determine the fate of the entire Jade Empire. Will you prevent the destruction of this beautiful land, or will you crush it beneath your heel? Are you a warrior who uses his strength and fighting mastery to bring peace, or will you instead use your power to bring pain and ruin? The choice is yours.</string>
    <string name="label_summary">Summary</string>
    <string name="label_storyline">Storyline</string>
    <string name="label_sample_storyline">In the ancient, mysterious world of the Jade Empire, you train under your master’s watchful eye and learn powerful martial arts and mystical powers.\n\nWhen danger threatens, you travel across the world, from the harsh mountains of the Land of Howling Spirits to the lush gardens of the Imperial City.\n\nIn your adventures you face powerful human and supernatural foes, learn exotic and magical martial arts, and discover the darkest secrets of the world.\n\nOnly by mastering the greatest fighting styles and defeating the most powerful enemies will you earn your place as a master of martial arts in the world of Jade Empire.</string>
    <string name="label_videos">Videos</string>
    <string name="label_screenshots">Screenshots</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings Activity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="label_settings">Settings</string>
    <string name="label_igdb_settings">IGDB Settings</string>
    <string name="label_igdb_user_key">IGDB User Key</string>
    <string name="label_igdb_base_url">IGDB Base URL</string>
    <string name="label_igdb_image_url">IGDB Image URL</string>
    <string name="label_youtube_settings">YouTube Settings</string>
    <string name="label_youtube_image_url">YouTube Image URL</string>
    <string name="label_youtube_video_url">YouTube Video URL</string>
    <string name="user_key">user_key</string>
    <string name="igdb_base_url">igdb_base_url</string>
    <string name="igdb_image_url">igdb_image_url</string>
    <string name="youtube_image_url">youtube_image_url</string>
    <string name="youtube_watch_url">youtube_watch_url</string>
</resources>