<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/label_igdb_settings">

        <EditTextPreference
            app:key="@string/user_key"
            app:title="@string/label_igdb_user_key"
            app:icon="@drawable/ic_baseline_account_circle_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/igdb_base_url"
            app:title="@string/label_igdb_base_url"
            app:icon="@drawable/ic_baseline_language_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/igdb_image_url"
            app:title="@string/label_igdb_image_url"
            app:icon="@drawable/ic_baseline_language_24"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/label_youtube_settings">

        <EditTextPreference
            app:key="@string/youtube_image_url"
            app:title="@string/label_youtube_image_url"
            app:icon="@drawable/ic_baseline_language_24"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="@string/youtube_watch_url"
            app:title="@string/label_youtube_video_url"
            app:icon="@drawable/ic_baseline_language_24"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>